--- a/media/css/m24/showcase.scss
+++ b/media/css/m24/showcase.scss
@@ -21,6 +21,7 @@
 .m24-c-showcase-subtitle {
     font-size: $alias-text-title-h4;
     text-wrap-style: balance;
+    padding-top: $spacer-sm;
 }
 
 .m24-c-showcase-media {
